css fix for overlapping elements on footer/header

--- a/public/stylesheets/results.css
+++ b/public/stylesheets/results.css
@@ -41,6 +41,7 @@ html, body{
 }
 
 .move {
+    margin-top: 50px;
     transition: margin-left 0.5s;
     padding: 1.25em 0 0 0;
     overflow: hidden;
@@ -85,18 +86,29 @@ article {
     padding-left: 15px;
 }
 
+
 footer {
-    background-color: #c0c0c0;
     text-align: center;
-    padding: 10px;
+    padding: 0;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
 }
 
+
 #total {
     text-align: center;
     font-size: 3em;
     font-weight: bold;
+}
+
+#recommendations {
+    margin: auto;
+    width: 70%;
+    margin-bottom: 150px;
+}
+
+#total {
+    font-size: 2em;
 }
